@@ -11,9 +11,6 @@
 #include <sys/event.h>
 #include <sys/socket.h>
 #include <sys/time.h>
-#include <netinet/in.h>
-#include <arpa/inet.h>
-#include <netdb.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <stdbool.h>
@@ -23,7 +20,6 @@
 #include <fcntl.h>
 #include <syslog.h>
 #include <asl.h>
-#include <libgen.h>
 #include <launch.h>
 
 typedef struct {
@@ -34,8 +30,9 @@ typedef struct {
 asl_context *asl_create_context(char *name, char *facility, uint32_t opts);
 int asl_finalize_context(asl_context *ctx);
 int asl_log_event(asl_context *ctx, uint8_t sev, char *msg);
-int asl_add_output_file(asl_context *ctx, int fp);
-int asl_remove_output_file(asl_context *ctx, int fp);
+
+int asl_add_output_file(asl_context *ctx, char *file);
+int asl_close_output_file(asl_context *ctx, int fd);
 
 int launchd_register();
 
